tests/files/ok/MutableField.krna


struct Mutable {
    mut x: int
}

fn assign() {
    let m = Mutable { x: 1 }

    m.x = 2
}