tests/files/fail/InstanceCheckGeneric.krna


fn f() {
    let opt = Option.some(1);

    if opt is Option$Some<string> {

    }

}